objects/Species_Rarity_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Common__c</fullName>
        <defaultValue>401</defaultValue>
        <label>Common</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endangered__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Endangered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extinction__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Extinction</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rare__c</fullName>
        <defaultValue>400</defaultValue>
        <label>Rare</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Species Rarity Setting</label>
    <pluralLabel>Species Rarity Settings</pluralLabel>
</CustomObject>